Closed
Bug 1045591
Opened 11 years ago
Closed 10 years ago
Version 31 does not respond to HTML 5 audio - Please visit www.mapetiteradio.com - audio stream does not work anymore - was working perfectly in version 30
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla34
People
(Reporter: alain, Assigned: jya)
References
Details
(Keywords: dev-doc-needed, regression, site-compat)
Attachments
(2 files)
178 bytes,
text/html
|
Details | |
1.37 KB,
patch
|
cpearce
:
review+
Sylvestre
:
approval-mozilla-aurora+
lmandel
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Version 31 does not respond to HTML 5 audio - Please visit www.mapetiteradio.com - audio streams does not work anymore - was working perfectly in version 30.
All others navigarors works fine with our website.
Component: Build Config → Untriaged
![]() |
||
Comment 1•11 years ago
|
||
[Tracking Requested - why for this release]: Regressed by Bug 984698
Regression window
Good:
https://hg.mozilla.org/integration/mozilla-inbound/rev/8510052b2313
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:31.0) Gecko/20100101 Firefox/31.0 ID:20140320152510
Bad:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e076f1fb825b
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:31.0) Gecko/20100101 Firefox/31.0 ID:20140320154837
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=8510052b2313&tochange=e076f1fb825b
Regressed by:
e076f1fb825b Chris Pearce — Bug 984698 - Reduce the amount of audio prerolled when we are not also decoding video in the same file. r=padenot
Blocks: 984698
status-firefox31:
--- → affected
status-firefox32:
--- → affected
status-firefox33:
--- → affected
status-firefox34:
--- → affected
status-firefox-esr24:
--- → unaffected
tracking-firefox32:
--- → ?
tracking-firefox33:
--- → ?
tracking-firefox34:
--- → ?
Component: Untriaged → Video/Audio
Keywords: regressionwindow-wanted
Product: Firefox → Core
![]() |
||
Comment 2•11 years ago
|
||
[Tracking Requested - why for this release]:
status-firefox-esr31:
--- → affected
tracking-firefox-esr31:
--- → ?
Updated•11 years ago
|
tracking-firefox34:
? → ---
Comment 3•11 years ago
|
||
The simplified test case doesn't auto play
Assignee | ||
Updated•11 years ago
|
Assignee: nobody → jyavenard
Assignee | ||
Comment 4•10 years ago
|
||
(In reply to Alice0775 White from comment #1)
> Regressed by:
> e076f1fb825b Chris Pearce — Bug 984698 - Reduce the amount of audio
> prerolled when we are not also decoding video in the same file. r=padenot
there is no way this commit has any effect on autostart with audio-only stream
![]() |
||
Comment 5•10 years ago
|
||
(In reply to Jean-Yves Avenard [:jya] from comment #4)
> (In reply to Alice0775 White from comment #1)
> > Regressed by:
> > e076f1fb825b Chris Pearce — Bug 984698 - Reduce the amount of audio
> > prerolled when we are not also decoding video in the same file. r=padenot
>
> there is no way this commit has any effect on autostart with audio-only
> stream
Download win32 build and load the attached simplified test case.
Last Good build
http://inbound-archive.pub.build.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-inbound-win32/1395354310/
Bad build
http://inbound-archive.pub.build.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-inbound-win32/1395355717/
You can easily check that rebgrssion range is CORRECT.
(these archived build will be deleted within 25 days)
Comment 6•10 years ago
|
||
(In reply to Jean-Yves Avenard [:jya] from comment #4)
> (In reply to Alice0775 White from comment #1)
> > Regressed by:
> > e076f1fb825b Chris Pearce — Bug 984698 - Reduce the amount of audio
> > prerolled when we are not also decoding video in the same file. r=padenot
>
> there is no way this commit has any effect on autostart with audio-only
> stream
Look at MediaDecoderStateMachine::HasFutureAudio().
Assignee | ||
Comment 7•10 years ago
|
||
fix autoplay for audio only stream
Attachment #8474406 -
Flags: review?(cpearce)
Comment 8•10 years ago
|
||
Comment on attachment 8474406 [details] [diff] [review]
Fix media element's autoplay for audio-only stream
Review of attachment 8474406 [details] [diff] [review]:
-----------------------------------------------------------------
OMG lol sux.
Attachment #8474406 -
Flags: review?(cpearce) → review+
Assignee | ||
Comment 9•10 years ago
|
||
Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
Comment 10•10 years ago
|
||
Keywords: checkin-needed
Comment 11•10 years ago
|
||
Jean-Yves, can we get an uplift request for aurora & beta? Thanks
Flags: needinfo?(jyavenard)
Assignee | ||
Comment 12•10 years ago
|
||
Comment on attachment 8474406 [details] [diff] [review]
Fix media element's autoplay for audio-only stream
Approval Request Comment
[Feature/regressing bug #]:984698 . Bug is only triggered more often following 984698
[User impact if declined]:Audio playback not starting. Site's owner recommendation being to use IE/Chrome
[Describe test coverage new/current, TBPL]: on m-c
[Risks and why]: Can't think of any
[String/UUID change made/needed]: none
Attachment #8474406 -
Flags: approval-mozilla-aurora?
Flags: needinfo?(jyavenard)
Updated•10 years ago
|
Attachment #8474406 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 13•10 years ago
|
||
(In reply to Jean-Yves Avenard [:jya] from comment #12)
> Comment on attachment 8474406 [details] [diff] [review]
> Fix media element's autoplay for audio-only stream
>
> Approval Request Comment
> [Feature/regressing bug #]:984698 . Bug is only triggered more often
> following 984698
> [User impact if declined]:Audio playback not starting. Site's owner
> recommendation being to use IE/Chrome
> [Describe test coverage new/current, TBPL]: on m-c
> [Risks and why]: Can't think of any
> [String/UUID change made/needed]: none
This looks safe enough. Is there any reason not to take this on beta? If not, let's get this in today for beta8.
Flags: needinfo?(jyavenard)
Assignee | ||
Comment 14•10 years ago
|
||
I only requested approval-mozilla-aurora, following instructions there:
https://wiki.mozilla.org/Release_Management/Uplift_rules#Aurora_Uplift_.28approval-mozilla-aurora.29
"Must be landed on mozilla-central as well as mozilla-aurora"
can certainly do beta too
Assignee | ||
Comment 15•10 years ago
|
||
Comment on attachment 8474406 [details] [diff] [review]
Fix media element's autoplay for audio-only stream
Approval Request Comment
[Feature/regressing bug #]:984698 . Bug is only triggered more often following 984698
[User impact if declined]:Audio playback not starting. Site's owner recommendation being to use IE/Chrome
[Describe test coverage new/current, TBPL]: on m-c
[Risks and why]: Can't think of any
[String/UUID change made/needed]: none
Attachment #8474406 -
Flags: approval-mozilla-beta?
Flags: needinfo?(jyavenard)
Comment 16•10 years ago
|
||
Comment on attachment 8474406 [details] [diff] [review]
Fix media element's autoplay for audio-only stream
I'm approving this small patch for beta before landing on m-c in order to make beta8.
For future, it is fine to request aurora and beta uplift at the same time.
Attachment #8474406 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 17•10 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/392aca6fddc2
https://hg.mozilla.org/releases/mozilla-beta/rev/f595bdcdbd1e
Comment 18•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Comment 19•10 years ago
|
||
Comment 20•10 years ago
|
||
Verified as fixed using the following environment:
FF32.0b8
Build Id: 20140818191513
OS: Win 7 x64, Mac Os X 10.10, Ubuntu 14.04 x64
Updated•10 years ago
|
Keywords: dev-doc-needed,
site-compat
Reporter | ||
Comment 21•10 years ago
|
||
Hi to all of you,
Thanks, the bugs with HTML 5 audio stream seems to be resolved and fixed in version 33 Beta. It seems very stable.
Version 32, still crash after a while when zapping radio stations.
Please check : http://mapetiteradio.com
Note : all other navigators were and still handle properly our system. So we made no changes to our code.
Comment 22•10 years ago
|
||
Thank you Alain! I'm marking this as Verified on Firefox 33 based on the previous comment.
Keywords: verifyme
Reporter | ||
Comment 23•10 years ago
|
||
Hi again,
I was too much enthusiast. It did crashed again in version 33 Beta. Autoplay works, but when zapping radio stations, it crash.
Sorry.
Best regards,
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 24•10 years ago
|
||
Alain it sounds like this may be another issue, since initially this was about the audio stream not working at all, while now it seems to work but with intermittent crashes. I think you should log a separate bug for this.
If I'm mistaking and this is the same issue as originally reported then you can leave it this way.
Reporter | ||
Comment 25•10 years ago
|
||
Hi Florin,
You are not mistaking, but it was one of the issue that start happening with version 31.
Audio did not work - autostart did not work - Firefox crashed
Now here is the situation with version 33 Beta :
Audio works (resolved) - autostart works (resolved) - Firefox crash (not solved) when navigating between radio stations. If I stay on the same station (same page - same player), it won't crash.
So, your decision, if you want me to open another big.
Best regards,
Assignee | ||
Comment 26•10 years ago
|
||
(In reply to Florin Mezei, QA (:FlorinMezei) [on vacation - Sep 8-15 ] from comment #24)
> Alain it sounds like this may be another issue, since initially this was
> about the audio stream not working at all, while now it seems to work but
> with intermittent crashes. I think you should log a separate bug for this.
It doesn't appear to me to be the same issue (which was about sound not starting).
A new bug would be better IMHO.
Comment 27•10 years ago
|
||
OK, I reported this crash in bug 1067551 and will re-close this bug. Alain I asked in the new bug for crash signatures if you can provide them! Thanks.
Status: REOPENED → RESOLVED
Closed: 10 years ago → 10 years ago
Resolution: --- → FIXED
Comment 28•10 years ago
|
||
This does not meet ESR landing criteria.
You need to log in
before you can comment on or make changes to this bug.
Description
•