Bug 1045591 - Fix media element's autoplay for audio-only stream. r=cpearce, a=sledru